--- a/index.html
+++ b/index.html
@@ -13,9 +13,22 @@
   <body>
     <div class="typewriter">
       <h1>
-        Bò <img src="./images/cow.png" /> xin lỗi heo ngốc <img src="./images/pig.png" /> nhiều nha
-        thương heo nhiều nha <img src="./images/hearts.png" /><img src="./images/hearts.png" /><img src="./images/hearts.png" /> <br />
-        <img src="./images/clover.png" /> Gửi những điều <img src="./images/clover.png" /> tốt đẹp cho heo xinh đẹp <img src="./images/clover.png" /> hiền hậu nhân từ tốt <br/> bụng hoa hậu hoàng hậu <img src="./images/clover.png" /> mỹ nhân mỹ nữ mỹ miều <img src="./images/clover.png" />
+        Bò <img src="./images/cow.png" /> xin lỗi heo ngốc
+        <img src="./images/pig.png" /> nhiều nha
+      </h1>
+      <h1>
+        thương heo nhiều nha <img src="./images/hearts.png" />
+        <img src="./images/hearts.png" /><img src="./images/hearts.png" />
+        <img src="./images/clover.png" /> Gửi những
+      </h1>
+      <h1>
+        điều <img src="./images/clover.png" /> tốt đẹp cho heo xinh đẹp
+        <img src="./images/clover.png" /> 
+      </h1>
+      <h1>hiền hậu nhân từ tốt bụng hoa hậu <img src="./images/clover.png" /></h1>
+      <h1>
+        hoàng hậu mỹ nhân mỹ nữ mỹ miều
+        <img src="./images/clover.png" />
       </h1>
     </div>
     <canvas id="pinkboard"></canvas>
