--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
       </h1>
       <h1>
         điều <img src="./images/clover.png" /> tốt đẹp cho heo xinh đẹp
-        <img src="./images/clover.png" /> 
+        <img src="./images/clover.png" />
       </h1>
-      <h1>hiền hậu nhân từ tốt bụng hoa hậu <img src="./images/clover.png" /></h1>
+      <h1>
+        hiền hậu nhân từ tốt bụng hoa hậu <img src="./images/clover.png" />
+      </h1>
       <h1>
         hoàng hậu mỹ nhân mỹ nữ mỹ miều
         <img src="./images/clover.png" />
